[gd_scene load_steps=8 format=3 uid="uid://drg0sr7jdfiel"]

[ext_resource type="Script" path="res://Code/Scenes/UI/UISlot.gd" id="1_c5ua0"]
[ext_resource type="Texture2D" uid="uid://ct7oa74jhqcwq" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/74.jpg" id="2_4mrr5"]
[ext_resource type="PackedScene" uid="uid://cvh086w8yapm0" path="res://Scenes/UI/Lists/attack_list.tscn" id="2_l63e3"]
[ext_resource type="Texture2D" uid="uid://d3nrajtlwbvgh" path="res://Art/Cards/4 ex Team Magma vs Team Aqua/84.jpg" id="3_bcik8"]
[ext_resource type="PackedScene" uid="uid://dp781vdb5kvc7" path="res://Scenes/UI/UIComponents/art_button.tscn" id="3_nyxqq"]
[ext_resource type="PackedScene" uid="uid://bs3ila6cpt8n1" path="res://Scenes/UI/UIComponents/types.tscn" id="4_5yd0i"]
[ext_resource type="Texture2D" uid="uid://cijlbc37pj4gd" path="res://icon.svg" id="5_12v7q"]

[node name="ActivePokemon" type="Control"]
layout_mode = 3
anchor_left = -0.029
anchor_right = 0.208
anchor_bottom = 0.226
offset_left = 0.320002
offset_right = 0.360001
offset_bottom = 0.279999
script = ExtResource("1_c5ua0")
attack_list = ExtResource("2_l63e3")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 198.0
offset_bottom = 164.0

[node name="HBoxContainer" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="Main/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 46)
layout_mode = 2
text = "Team Magma's
Mightyena"

[node name="MaxHP" type="RichTextLabel" parent="Main/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 46)
layout_mode = 2
bbcode_enabled = true
text = "[u]HP[/u] 200/200"

[node name="ArtButton" parent="Main" instance=ExtResource("3_nyxqq")]
unique_name_in_owner = true
layout_mode = 2

[node name="TrainerAttached" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 73.0
offset_right = 31.0
offset_bottom = 133.0
mouse_filter = 2

[node name="Tool" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("2_4mrr5")
expand_mode = 5
stretch_mode = 4

[node name="TM" type="TextureRect" parent="TrainerAttached"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
texture = ExtResource("3_bcik8")
expand_mode = 5
stretch_mode = 4

[node name="Plus" type="RichTextLabel" parent="TrainerAttached/TM"]
visible = false
layout_mode = 0
offset_left = -6.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 28.0
bbcode_enabled = true
text = "+"

[node name="EnergyTypes" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = -3.0
offset_top = 167.0
offset_right = 209.0
offset_bottom = 167.0
mouse_filter = 2

[node name="Types" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types2" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types3" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types4" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types5" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types6" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types7" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types8" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types9" parent="EnergyTypes" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="TypeContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = 45.0
offset_right = 137.0
offset_bottom = 65.0
mouse_filter = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Types" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
layout_mode = 2

[node name="Types2" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types3" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types4" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types5" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Types6" parent="TypeContainer" instance=ExtResource("4_5yd0i")]
visible = false
layout_mode = 2

[node name="Conditions" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 45.0
offset_right = 210.0
offset_bottom = 149.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Poison" type="TextureRect" parent="Conditions"]
unique_name_in_owner = true
modulate = Color(0.415686, 0.00784314, 0.494118, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="Burn" type="TextureRect" parent="Conditions"]
unique_name_in_owner = true
modulate = Color(0.882353, 0.211765, 0.298039, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="TurnConditions" type="TabContainer" parent="Conditions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
tabs_visible = false

[node name="Paralysis" type="TextureRect" parent="Conditions/TurnConditions"]
modulate = Color(1, 1, 0.0901961, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="Sleep" type="TextureRect" parent="Conditions/TurnConditions"]
visible = false
modulate = Color(0, 1, 1, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="Confusion" type="TextureRect" parent="Conditions/TurnConditions"]
visible = false
modulate = Color(0.196078, 0.529412, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="SecondaryCondtions" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 145.0
offset_top = 45.0
offset_right = 177.0
offset_bottom = 113.0
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Imprison" type="TextureRect" parent="SecondaryCondtions"]
unique_name_in_owner = true
modulate = Color(0.984314, 0.498039, 0.745098, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[node name="Shockwave" type="TextureRect" parent="SecondaryCondtions"]
unique_name_in_owner = true
modulate = Color(0.921569, 0.384314, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_12v7q")
expand_mode = 4

[connection signal="show_attacks" from="Main/ArtButton" to="." method="_on_art_button_show_attacks"]
[connection signal="show_card" from="Main/ArtButton" to="." method="_on_art_button_show_card"]
